<resources>
    <string name="app_name_title">TUTOSAURUS</string>
    <string name="app_name">TutoSaurus</string>
    <string name="welcoming_message">The app for every tutor and tutoree.</string>
    <string name="welcome_message_description">Dino welcome</string>
    <string name="instructions_message">Do not forget to sign up before logging in to the application.</string>
    <string name="email_ask">Enter Email</string>
    <string name="password_ask">Enter Password</string>
    <string name="connection_button">Log in</string>
    <string name="register_button">Sign up</string>
    <string name="password_reset_title">Forgot Password?</string>
    <string name="password_forgot_btn">Forgot your Password?</string>
    <string name="reset_password_btn">RESET PASSWORD</string>
    <string name="request_email_password_reset">No worries! We just need the email you registered with and we\'ll send you
    the instructions.</string>
    <string name="request_registered_email">"Enter your registered email id"</string>
    <string name="reset_request_fail">Failed to send reset!</string>
    <string name="reset_password_sent">"Instructions sent to your email!"</string>
    <string name="authorize_app_required">Could not complete sign up</string>
    <string name="check_connectivity">Check your internet connection</string>
    <string name="status_not_connected">You are not connected to Internet!</string>
    <string name="status_connected">No account yet? Sign up with Tequila!</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="gaspar">Gaspar</string>
    <string name="password">Password</string>
    <string name="activity_register_name">Register</string>
    <string name="activity_confirmation_name">Confirmation</string>
    <string name="instructions_register">
        Please fill the boxes below with your Gaspar account
        and register with Tequila.</string>
    <string name="send_info_to_tequila">Confirm registration with Tequila</string>
    <string name="thanks_message1">Thank you for registering !</string>
    <string name="thanks_message2">Please enter a password for your new account below.</string>
    <string name="recap_message">Provided information is :</string>
    <string name="choose_password">Choose Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_register">Confirm Registration</string>
    <string name="mismatch_password">Passwords must match</string>
    <string name="missing_password">Password missing</string>
    <string name="authentification_failed">Auth failed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logOut">Log out</string>
    <string name="firstLayout_button">Profile</string>
    <string name="secondLayout_button">Find Tutors</string>
    <string name="thirdLayout_button">Be A Tutor</string>
    <string name="fourthLayout_button">Settings</string>
    <string name="fifthLayout_button">Help</string>
    <string name="sixthLayout_button">About</string>
    <string name="seventhLayout_button">Meetings</string>
    <string name="title">TutoSaurus ©</string>
    <string name="version">Version : 1.0.0</string>
    <string name="description">Copyright EPFL Inc. 2016. All rights reserved.</string>
    <string name="developers">This app is developed by team No Clue from EPFL.</string>
    <string name="goal">
        This Android application is intended for students and tutors from Switzerland
        and provides study material needed to help every student realize their potential.</string>
    <string name="phone_number_help">+41 21 000 0000</string>
    <string name="clock_message_phone">Monday to Friday : 06:00 to 18:00</string>
    <string name="help_message_phone">Need some help urgently ? You can call our support line.
        You will be put in interaction with one of our support agents.</string>
    <string name="email_address_help">android.studio@epfl.ch</string>
    <string name="clock_message_email">Service available 24/7</string>
    <string name="help_message_email">You can also send us an email.
        A member of the assistance service will answer to your request soon.</string>
    <string name="mathematics_enabled">Mathematics</string>
    <string name="physics_enabled">Physics</string>
    <string name="chemistry_enabled">Chemistry</string>
    <string name="computer_science_enabled">Computer Science</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="share_location">Share nameLocation</string>
    <string name="epfl_web_site">Go to EPFL website</string>
    <string name="load_picture">Load From Gallery</string>
    <string name="take_picture">Take With Camera</string>
    <string name="change_password">Change Password</string>
    <string name="explanations_change_password">Please choose a new password for your account.</string>
    <string name="send_new_password">Send</string>
    <string name="title_lists_subjects">List of subjects</string>
    <string name="dialog_list_subjects">dialog_list_subjects</string>
    <string name="title_subjects_offered">List of subjects offered</string>
    <string name="subtitle_subjects_offered">Choose the subjects you are expert in</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="computerPresExample">
        "I'm an experienced software developer. I got my bachelor's degree in Timbuctu in Computer "
        "science in 2014. I have worked for Apple, Microsoft and Oracle. I can help you in the "
        "following branches:\n"
        "- Machine Learning\n"
        "- Parallel Computing\n"
        "- Software Engineering"
    </string>
</resources>