<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_layout"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/firstLayout_button" />
        <item
            android:id="@+id/nav_second_layout"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/secondLayout_button" />
        <item
            android:id="@+id/nav_third_layout"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/thirdLayout_button" />
        <item
            android:id="@+id/nav_fourth_layout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/fourthLayout_button" />
        <item
            android:id="@+id/nav_fifth_layout"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/fifthLayout_button" />
        <item
            android:id="@+id/nav_sixth_layout"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/sixthLayout_button" />
        <item
            android:id="@+id/nav_seventh_layout"
            android:icon="@android:drawable/btn_star"
            android:title="@string/seventhLayout_button" />
        <item
            android:id="@+id/nav_db_layout"
            android:title="Firebase db test"
            android:icon="?android:attr/actionModeCutDrawable" />
    </group>

</menu>
