<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

    <ImageView
        android:id="@+id/picture_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonLoadPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="loadImageFromGallery"
        android:text="@string/load_picture"
        android:layout_marginTop="270dp"
        android:layout_alignParentEnd="true">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonTakePicture"
        android:text="@string/take_picture"
        android:onClick="dispatchTakePictureIntent"
        android:layout_marginTop="270dp"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/change_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/changePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/changePassword"
        android:layout_centerHorizontal="true"
        android:id="@+id/chooseNewPass"
        android:background="@android:drawable/editbox_background"
        android:textAlignment="center" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/chooseNewPass"
        android:layout_centerHorizontal="true"
        android:id="@+id/confirmNewPass"
        android:background="@android:drawable/editbox_background"
        android:textAlignment="center" />

    <Button
        android:text="@string/send_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmNewPass"
        android:layout_centerHorizontal="true"
        android:id="@+id/changeNewPass"
        android:background="@android:drawable/editbox_background"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic"
        android:textColor="@color/colorAccent"
        android:onClick="changePassword" />

</RelativeLayout>