<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.tutosaurus.MainActivity">


    <TextView
        android:text="@string/welcoming_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomingMessage"
        android:textSize="24sp"
        android:textStyle="normal|bold|italic"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/dino_welcome"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="200dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/instructions_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructionsMessage"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp" />

    <Button
        android:text="Location Test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationTestButton"
        android:textStyle="normal|bold"
        android:onClick="openLocation"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/connection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connectionButton"
        android:background="@android:drawable/editbox_background"
        android:textSize="24sp"
        android:textColor="@android:color/holo_green_dark"
        android:textAllCaps="false"
        android:textStyle="normal|bold|italic"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/instructionsMessage"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:text="@string/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:background="@android:drawable/editbox_background"
        android:textSize="24sp"
        android:textStyle="normal|bold|italic"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_dark"
        android:onClick="sendMessageForReg"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/connectionButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
