<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.tutosaurus.ConfirmationActivity">

    <TextView
        android:text="@string/thanks_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/firstThanksMessage"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/thanks_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/secondThanksMessage"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_below="@+id/firstThanksMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:text="@string/recap_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recapMessage"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/secondThanksMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstNameProvided"
        android:textColor="@color/colorAccent"
        android:textStyle="normal|bold"
        android:textSize="16sp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/recapMessage"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastNameProvided"
        android:layout_marginTop="11dp"
        android:textColor="@color/colorAccent"
        android:textStyle="normal|bold"
        android:textSize="16sp"
        android:layout_below="@+id/firstNameProvided"
        android:layout_alignLeft="@+id/firstNameProvided"
        android:layout_alignStart="@+id/firstNameProvided" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailAddressProvided"
        android:layout_marginTop="11dp"
        android:textColor="@color/colorAccent"
        android:textStyle="normal|bold"
        android:textSize="16sp"
        android:layout_below="@+id/lastNameProvided"
        android:layout_alignLeft="@+id/lastNameProvided"
        android:layout_alignStart="@+id/lastNameProvided" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailAddressProvided"
        android:layout_alignLeft="@+id/emailAddressProvided"
        android:layout_alignStart="@+id/emailAddressProvided"
        android:layout_marginTop="11dp"
        android:id="@+id/sciperProvided"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/back_to_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backToLoginButton"
        android:background="@android:drawable/editbox_background"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textStyle="normal|bold|italic"
        android:textColor="@android:color/holo_blue_dark"
        android:onClick="sendMessageForLogin"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/sciperProvided"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
